--- a/demo.ipynb
+++ b/demo.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jasper-zheng/streamable-stable-audio-open/blob/main/demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,51 +12,51 @@
     },
     {
       "cell_type": "markdown",
+      "id": "Qk7Q7YUvi1Tz",
+      "metadata": {
+        "id": "Qk7Q7YUvi1Tz"
+      },
       "source": [
         "# Streaming Stable Audio Open 1.0's Autoencoder  \n",
         "\n",
         "Streaming pre-trained [Stable Audio Open 1.0](https://huggingface.co/stabilityai/stable-audio-open-1.0)'s autoencoder with cached convolution, for realtime continuous inference. And scripting it to TorchScript to be used with [nn~](https://github.com/acids-ircam/nn_tilde) in MaxMSP/PureData.  \n",
         "\n",
         "Author: Jasper Shuoyang Zheng"
-      ],
-      "metadata": {
-        "id": "Qk7Q7YUvi1Tz"
-      },
-      "id": "Qk7Q7YUvi1Tz"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Installation (Only do this once)"
-      ],
+      "id": "AxfvVFuMhh7l",
       "metadata": {
         "id": "AxfvVFuMhh7l"
       },
-      "id": "AxfvVFuMhh7l"
+      "source": [
+        "## Installation (Only do this once)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "FJqbPWuzey3H",
+      "metadata": {
+        "id": "FJqbPWuzey3H"
+      },
+      "outputs": [],
       "source": [
         "!git clone https://github.com/jasper-zheng/streamable-stable-audio-open.git\n",
         "%cd streamable-stable-audio-open\n",
         "!pip install -r requirements.txt"
-      ],
-      "metadata": {
-        "id": "FJqbPWuzey3H"
-      },
-      "id": "FJqbPWuzey3H",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Import libraries"
-      ],
+      "id": "O_jbMOX3hpdV",
       "metadata": {
         "id": "O_jbMOX3hpdV"
       },
-      "id": "O_jbMOX3hpdV"
+      "source": [
+        "## Import libraries"
+      ]
     },
     {
       "cell_type": "code",
@@ -75,6 +75,7 @@
         "import torch\n",
         "from models import get_pretrained_pretransform\n",
         "from export import remove_parametrizations\n",
+        "torch_250 = True if torch.__version__ >= \"2.5\" else False\n",
         "\n",
         "import librosa, time\n",
         "from IPython.display import Audio, display\n",
@@ -83,22 +84,23 @@
         "\n",
         "cc.use_cached_conv(True)\n",
         "\n",
-        "device = \"mps\" if torch.backends.mps.is_available() else \"cuda\" if torch.cuda.is_available() else \"cpu\""
+        "device = \"mps\" if torch.backends.mps.is_available() else \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "print(f\"Using device: {device}, torch {torch.__version__}\")"
       ]
     },
     {
       "cell_type": "markdown",
+      "id": "OHSJCPYngzoP",
+      "metadata": {
+        "id": "OHSJCPYngzoP"
+      },
       "source": [
         "## Download and load pre-trained model\n",
         "\n",
         "Before proceed to model downloading, you need to:  \n",
         "1. use `hf auth login` in terminal to login to your HuggingFace account,\n",
         "2. go to [stable-audio-open-1.0](https://huggingface.co/stabilityai/stable-audio-open-1.0) and agree to Stability AI's License Agreement to get access to the model weights."
-      ],
-      "metadata": {
-        "id": "OHSJCPYngzoP"
-      },
-      "id": "OHSJCPYngzoP"
+      ]
     },
     {
       "cell_type": "code",
@@ -112,7 +114,7 @@
         "## Load the autoencoder from stable-audio-open-1.0\n",
         "\n",
         "autoencoder, model_config = get_pretrained_pretransform(\"stabilityai/stable-audio-open-1.0\",\n",
-        "                                                         model_half=True,\n",
+        "                                                         model_half=False,\n",
         "                                                         skip_bottleneck=True,\n",
         "                                                         device=device)\n",
         "\n",
@@ -121,21 +123,22 @@
         "print(f\"downsampling_ratio: {model_config['model']['pretransform']['config'].get('downsampling_ratio', 'unknown')}\")\n",
         "print(f\"io_channels: {model_config['model']['pretransform']['config'].get('io_channels', 'unknown')}\")\n",
         "\n",
-        "autoencoder = autoencoder.to(device)\n",
-        "autoencoder.eval()\n",
+        "remove_parametrizations(autoencoder)\n",
         "\n",
-        "remove_parametrizations(autoencoder)"
+        "autoencoder = autoencoder.to(device)\n",
+        "autoencoder = autoencoder.eval()\n",
+        "\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Prepare audio chunks"
-      ],
+      "id": "FsufRjPSh684",
       "metadata": {
         "id": "FsufRjPSh684"
       },
-      "id": "FsufRjPSh684"
+      "source": [
+        "## Prepare audio chunks"
+      ]
     },
     {
       "cell_type": "code",
@@ -162,13 +165,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Forward pass the encoder and decoder"
-      ],
+      "id": "pBQmRNjKiCk4",
       "metadata": {
         "id": "pBQmRNjKiCk4"
       },
-      "id": "pBQmRNjKiCk4"
+      "source": [
+        "## Forward pass the encoder and decoder"
+      ]
     },
     {
       "cell_type": "code",
@@ -184,28 +187,34 @@
         "\n",
         "latent_chunks = []\n",
         "with torch.no_grad():\n",
-        "    torch.cuda.synchronize() if device == \"cuda\" else torch.mps.synchronize()\n",
-        "    start_time = time.perf_counter()\n",
+        "    if torch_250:\n",
+        "        torch.cuda.synchronize() if device == \"cuda\" else torch.mps.synchronize()\n",
+        "        start_time = time.perf_counter()\n",
+        "\n",
         "    for i, w in enumerate(wv_chunks):\n",
         "        latent = autoencoder.encode(w)\n",
         "        latent_chunks.append(latent)\n",
-        "    torch.cuda.synchronize() if device == \"cuda\" else torch.mps.synchronize()\n",
-        "    end_time = time.perf_counter()\n",
-        "    print(f'Encoder execution time: {end_time - start_time:.2f} seconds')\n",
+        "\n",
+        "    if torch_250:\n",
+        "        torch.cuda.synchronize() if device == \"cuda\" else torch.mps.synchronize()\n",
+        "        print(f'Encoder execution time: {time.perf_counter() - start_time:.2f} seconds')\n",
         "\n",
         "\n",
         "print(f'Running decoder, device: {device}')\n",
         "## Run audio chunks to the decoder\n",
         "wv_recons = []\n",
         "with torch.no_grad():\n",
-        "    torch.cuda.synchronize() if device == \"cuda\" else torch.mps.synchronize()\n",
-        "    start_time = time.perf_counter()\n",
+        "    if torch_250:\n",
+        "        torch.cuda.synchronize() if device == \"cuda\" else torch.mps.synchronize()\n",
+        "        start_time = time.perf_counter()\n",
+        "\n",
         "    for i, latent in enumerate(latent_chunks):\n",
         "        wv_recon = autoencoder.decode(latent)\n",
         "        wv_recons.append(wv_recon)\n",
-        "    torch.cuda.synchronize() if device == \"cuda\" else torch.mps.synchronize()\n",
-        "    end_time = time.perf_counter()\n",
-        "    print(f'Decoder execution time: {end_time - start_time:.2f} seconds')\n",
+        "\n",
+        "    if torch_250:\n",
+        "        torch.cuda.synchronize() if device == \"cuda\" else torch.mps.synchronize()\n",
+        "        print(f'Decoder execution time: {time.perf_counter() - start_time:.2f} seconds')\n",
         "\n",
         "wv_recon = torch.cat(wv_recons, dim=-1)\n",
         "print(f'reconstructed waveform shape: {wv_recon.shape}')"
@@ -228,32 +237,48 @@
     },
     {
       "cell_type": "markdown",
+      "id": "jXJPzGygiRKt",
+      "metadata": {
+        "id": "jXJPzGygiRKt"
+      },
       "source": [
         "## Export to TorchScript  \n",
         "\n",
         "If you have [nn~](https://github.com/acids-ircam/nn_tilde) in MaxMSP/PureData:"
-      ],
-      "metadata": {
-        "id": "jXJPzGygiRKt"
-      },
-      "id": "jXJPzGygiRKt"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python streamable-stable-audio-open/export.py --output exported/stable-vae.ts --streaming"
-      ],
+      "execution_count": null,
+      "id": "WbCqXEa1iUi5",
       "metadata": {
         "id": "WbCqXEa1iUi5"
       },
-      "id": "WbCqXEa1iUi5",
+      "outputs": [],
+      "source": [
+        "!python streamable-stable-audio-open/export.py --output exported/stable-ae-float32-torch25x.ts --streaming\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "id": "44e9b9e2",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "L4",
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "stableaudio",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -267,13 +292,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.13"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "L4",
-      "include_colab_link": true
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
